--- a/ProjectIndividual.UI/CustomControls/RuleControl.xaml
+++ b/ProjectIndividual.UI/CustomControls/RuleControl.xaml
@@ -7,6 +7,7 @@
              xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:gridEntities="clr-namespace:ProjectIndividual.Domain.GridComponent.Entities;assembly=ProjectIndividual.Domain"
              xmlns:rulesEntities="clr-namespace:ProjectIndividual.Domain.RulesComponent.Entities;assembly=ProjectIndividual.Domain"
+             xmlns:viewModels="clr-namespace:ProjectIndividual.UI.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="661.5">
     <UserControl.Resources>
@@ -20,6 +21,11 @@
                 <x:Type TypeName="rulesEntities:Area"></x:Type>
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
+        <ObjectDataProvider x:Key="CellOutStateEnum" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="viewModels:CellOutStateViewModel"></x:Type>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </UserControl.Resources>
     <Grid>
         <DockPanel LastChildFill="True">
@@ -30,12 +36,6 @@
             <ComboBox ItemsSource="{Binding Source={StaticResource CellStateEnum}}" SelectedItem="{Binding InputState}" Width="53"></ComboBox>
             <Label Content="and there are" Background="AliceBlue"></Label>
 
-            <!--<TextBox  HorizontalAlignment="Left" Width="35" x:Name="tbNumOcells" ></TextBox>
-            <Label Background="AliceBlue" HorizontalAlignment="Left" VerticalContentAlignment="Center" Content="cells"></Label>
-            <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding Source={StaticResource CellStateEnum}}" Width="94"></ComboBox>
-            <Label Background="AliceBlue" HorizontalAlignment="Left" VerticalContentAlignment="Center" Content="in"></Label>
-            <ComboBox HorizontalAlignment="Left"  ItemsSource="{Binding Source={StaticResource NeighbourHoodEnum}}" Width="163"></ComboBox>-->
-            <!--<local:StatementControl></local:StatementControl>-->
             <ListView x:Name="listStatements" ItemsSource="{Binding Statements}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -45,7 +45,7 @@
             </ListView>
             <Button Content="Add statement"  Command="{Binding AddStatementCommand}" Width="96" ></Button>
             <Label Content="then current cell becomes"></Label>
-            <ComboBox ItemsSource="{Binding Source={StaticResource CellStateEnum}}" SelectedItem="{Binding RetState}" Width="53"></ComboBox>
+            <ComboBox ItemsSource="{Binding Source={StaticResource CellOutStateEnum}}" SelectedItem="{Binding RetState}" Width="53"></ComboBox>
             
         </DockPanel>
     </Grid>
