--- a/ProjectIndividual.UI/CustomControls/StatementControl.xaml
+++ b/ProjectIndividual.UI/CustomControls/StatementControl.xaml
@@ -7,6 +7,7 @@
              xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:rulesEntities="clr-namespace:ProjectIndividual.Domain.RulesComponent.Entities;assembly=ProjectIndividual.Domain"
              xmlns:cellEntities="clr-namespace:ProjectIndividual.Domain.GridComponent.Entities;assembly=ProjectIndividual.Domain"
+             xmlns:viewModels="clr-namespace:ProjectIndividual.UI.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="44.863" Width="481.125">
     <UserControl.Resources>
@@ -25,17 +26,23 @@
                 <x:Type TypeName="cellEntities:CellState"></x:Type>
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
+        <ObjectDataProvider x:Key="CellSeekStateEnum" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="viewModels:CellSeekStateViewModel"></x:Type>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </UserControl.Resources>
     <DockPanel LastChildFill="True">
         <Grid Background="AliceBlue" DockPanel.Dock="Top">
             <ComboBox Width="61" HorizontalAlignment="Left" ItemsSource="{Binding Source={StaticResource LogicalConnectorEnum}}" 
-                      SelectedItem="{Binding Connector}" ></ComboBox>
+                      SelectedItem="{Binding Connector}" 
+                        IsEnabled="{Binding ShowConnector}"></ComboBox>
             <TextBox HorizontalAlignment="Left" Width="35" Margin="66,0,0,0" x:Name="tbNumOcells" 
                     Text="{Binding LogicalSentence.NumOfCells}" ></TextBox>
             <Label HorizontalAlignment="Left" Margin="106,0,0,0" VerticalContentAlignment="Center" Content="cells"></Label>
             <ComboBox HorizontalAlignment="Left" Margin="144,0,0,0" 
-                      ItemsSource="{Binding Source={StaticResource CellStateEnum}}" Width="94"
-                      SelectedItem="{Binding LogicalSentence.SeekState}" ></ComboBox>
+                      ItemsSource="{Binding Source={StaticResource CellSeekStateEnum}}" Width="94"
+                      SelectedItem="{Binding SeekState}" ></ComboBox>
             <Label HorizontalAlignment="Left" Margin="243,0,0,0" VerticalContentAlignment="Center" Content="in"></Label>
             <TextBox Text="{Binding LogicalSentence.Num}" Width="50" HorizontalAlignment="Left" Margin="268,0,0,0"></TextBox>
             <ComboBox HorizontalAlignment="Left" Margin="318,0,0,0" 
