--- a/ProjectIndividual.UI/Views/RuleWindow.xaml
+++ b/ProjectIndividual.UI/Views/RuleWindow.xaml
@@ -6,11 +6,19 @@
         xmlns:local="clr-namespace:ProjectIndividual.UI.Views"
         xmlns:customControls="clr-namespace:ProjectIndividual.UI.CustomControls"
         xmlns:viewModels="clr-namespace:ProjectIndividual.UI.ViewModels"
+        xmlns:validation="clr-namespace:ProjectIndividual.UI.Validation"
         mc:Ignorable="d"
         Title="Rule" Height="300" Width="1108" WindowState="Maximized" >
     <Window.Resources>
-        <viewModels:RulesSetViewModel x:Key="rulesSet"></viewModels:RulesSetViewModel>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Themes/Styles.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        
+            <viewModels:RulesSetViewModel x:Key="rulesSet"></viewModels:RulesSetViewModel>
+        </ResourceDictionary>
     </Window.Resources>
+
     <Grid>
         <DockPanel LastChildFill="True">
             <Grid DockPanel.Dock="Top">
@@ -25,7 +33,17 @@
                 <Grid Width="167" HorizontalAlignment="Left" >
                     <Label HorizontalAlignment="Left" Content="Name of set:"></Label>
                     <TextBox x:Name="tbRuleName" Margin="82,0,-146,0" HorizontalAlignment="Left" Width="231"
-                             SourceUpdated="OnContentChanged" Text="{Binding RuleName, Mode=TwoWay, Source={StaticResource rulesSet}}" />
+                             SourceUpdated="OnContentChanged" 
+                             Style="{StaticResource textBoxInError}"
+                             Validation.ErrorTemplate="{StaticResource validationTemplate}" >
+                        <TextBox.Text>
+                            <Binding Path="RuleName" Mode="TwoWay" Source="{StaticResource rulesSet}" >
+                                <Binding.ValidationRules>
+                                    <validation:StringValidator></validation:StringValidator>
+                                </Binding.ValidationRules>
+                            </Binding>
+                        </TextBox.Text>
+                    </TextBox>
                 </Grid>
                 <ListView  ItemsSource="{Binding Rules , Source={StaticResource rulesSet}}">
                     <ListView.ItemTemplate>
